# audio-test-suite

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: AnalyzerComponent.cpp  AnalyzerComponent.h  SignalGeneratorComponent.cpp  SignalGeneratorComponent.h
Source/TestSuite/: AudioAnalyzer.cpp  AudioAnalyzer.h  SignalGenerator.cpp  SignalGenerator.h  TestRunner.cpp  TestRunner.h
Source/Utils/: FFTWrapper.cpp  FFTWrapper.h  ReportGenerator.cpp  ReportGenerator.h
